--- a/ex-binary-to-decimal.html
+++ b/ex-binary-to-decimal.html
@@ -14,13 +14,18 @@
     <main>
         <section class="PEE">
             <h2>確認事項</h2>
-            <p>xxxxx</p>
+            <p>2進数から10進数への変換は、変換したい2進数の各桁に注目して「1」となっている桁の「重み」をすべて足すことで求められる。
+                $n$ 桁目の重みは $ 2^{(n-1)} $ で求められる。<br>
+            </p>
             <hr>
-            <p>2進数から10進数への変換は、次の計算式で求められる。</p>
+            <p>例）2進数の「10111」を10進数の「23」に変換する手順</p>
             <p>$$
             \begin{eqnarray*}
-            1 \text{ Byte} &=& 8 \text{ bit}\\
-            n \text{ Byte} &=& 8n \text{ bit}
+            10111  &=& 10000 + 100 + 10 + 1\\
+            \text{(以下、10進数)}\\
+            &=& 2^4 + 2^2 + 2^1 + 2^0\\
+            &=& 16 + 4 + 2 + 1\\
+            &=& 23
             \end{eqnarray*}
             $$</p>
         </section>
