--- a/ex-bit-byte.html
+++ b/ex-bit-byte.html
@@ -14,7 +14,7 @@
     <main>
         <section class="PEE">
             <h2>確認事項</h2>
-            <p>xxxxx</p>
+            <p>$8 \text{ bit（ビット）}$をひとまとまりにした情報量の単位を$1 \text{ Byte（バイト）}$という。</p>
             <hr>
             <p>ビットとバイトの関係性は次の計算式で求められる。</p>
             <p>$$
