--- a/ex-bit-pattern.html
+++ b/ex-bit-pattern.html
@@ -14,9 +14,13 @@
     <main>
         <section class="PEE">
             <h2>確認事項</h2>
-            <p>bit(ビット)とは情報量を表す単位のこと。</p>
+            <p>
+                Yes/Noや0/1のように2つの状態のいずれかに決める情報の量を表す単位のことをbit（ビット）という。
+                $1 \text{ bit}$で2通りの情報量を表すことができる。<br>
+                $n \text{ bit}$ が何通りの情報量を表すことができるかを「ビットパターン」という。
+            </p>
             <hr>
-            <p>$ n \text{ bit} $ のビットパターンの組み合わせは次の計算式で求められる。</p>
+            <p>$ n \text{ bit} $ のビットパターンが何通りであるか次の計算式で求められる。</p>
             <p>$$
             \begin{eqnarray*}
             n \text{ bit} &=& 2^n \text{ 通り}
