--- a/ex-compression-rate.html
+++ b/ex-compression-rate.html
@@ -14,7 +14,9 @@
     <main>
         <section class="PEE">
             <h2>確認事項</h2>
-            <p>xxxxx</p>
+            <p>
+                データの内容をできるだけ保ちながらデータ量を減らすことを「圧縮」といい、圧縮されたデータをもとにもどすことを「展開」や「解凍」という。
+                データが圧縮された度合いは、圧縮率で示される。</p>
             <hr>
             <p>データの圧縮率は、次の計算式で求められる。</p>
             <p>$$
