--- a/ex-data-size-audio.html
+++ b/ex-data-size-audio.html
@@ -14,7 +14,16 @@
     <main>
         <section class="PEE">
             <h2>確認事項</h2>
-            <p>xxxxx</p>
+            <p>
+                　アナログ音声をデジタル化するためには、空気の振動を電気信号の波としてコンピュータに取り込み、標本化・量子化・符号化の順に処理を行う。<br>
+                　標本化では波を一定の時間間隔に区切り、波の高さを1つの音のデータとして取り出している。
+                １秒で何個の音のデータに区切っているかを標本化周波数（サンプリング周波数）といい、単位はヘルツ[Hz]で表す。<br>
+                　量子化では取り出したデータ（波の高さ）１つ１つに離散値として数値を割り当てている。
+                波の高さを何段階の情報量で表現するかを量子化ビット数という。<br>
+                　符号化で割り当てた数値を2進数に変換している。<br>
+                　なお、音声を出力するに当たりスピーカが１つ（1ch）とは限らない。イヤホンのように左右の耳で分かれてスピーカを２つ（2ch）使う場合もある。
+                このように、１つの音声データに対して、スピーカ何個分の音声データを収録しているかをチャンネル数といい、単位は $ch$ で表す
+            </p>
             <hr>
             <p>音声のデータ量は、次の計算式で求められる。</p>
             <p>$$
