--- a/ex-data-size-image.html
+++ b/ex-data-size-image.html
@@ -14,7 +14,13 @@
     <main>
         <section class="PEE">
             <h2>確認事項</h2>
-            <p>xxxxx</p>
+            <p>
+                　アナログ画像をデジタル化するためには、視覚情報を画素単位でコンピュータに取り込み、標本化・量子化・符号化の順に処理を行う。<br>
+                　標本化では視覚情報を空間方向に一定間隔に「画素」として区切り、１つの画素につき１つの色のデータとして取り出している。<br>
+                　量子化では取り出した画素のデータ（色の濃淡）１つ１つに離散値として数値を割り当てている。
+                色の濃淡を何段階の情報量で表現するかを「階調」といい。単位は$bit$で表す。<br>
+                　符号化で割り当てた数値を2進数に変換している。
+            </p>
             <hr>
             <p>画像のデータ量は、次の計算式で求められる。</p>
             <p>$$
