--- a/ex-data-size-video.html
+++ b/ex-data-size-video.html
@@ -14,7 +14,10 @@
     <main>
         <section class="PEE">
             <h2>確認事項</h2>
-            <p>xxxxx</p>
+            <p>
+                　静止画を短時間で連続で切り替えると、人間の目には動いているように見える。これを「動画」という。<br>
+                　１秒間に何枚の静止画を切り替えているかを「フレームレート」といい、単位は $fps$ で表す。
+            </p>
             <hr>
             <p>動画のデータ量は、次の計算式で求められる。</p>
             <p>$$
