--- a/ex-parity-bit.html
+++ b/ex-parity-bit.html
@@ -16,7 +16,7 @@
             <h2>確認事項</h2>
             <p>xxxxx</p>
             <hr>
-            <p>ビットとバイトの関係性は次の計算式で求められる。</p>
+            <p>パリティビットとは、「一定のビットの列の中に 1 が偶数個あるか奇数個あるか」を示す冗長なビットのことである。これを用いることで「パリティ検査」という誤り検出を行うことができる。</p>
             <p>$$
             \begin{eqnarray*}
             1 \text{ Byte} &=& 8 \text{ bit}\\
