--- a/ex-data-size-video.html
+++ b/ex-data-size-video.html
@@ -37,6 +37,45 @@
             テレビゲーム & 120 fps\\
             \end{array}
             $$</p>
+
+            <p>解像度の表し方</p>
+            <p>$$
+            \begin{aligned}
+            &\text{ディスプレイ解像度} &・・・& 横方向の画素数 \times 縦方向の画素数\\
+            &\text{dpi (dot per inch)} &・・・& 1 インチ あたりの ドット（画素）数\\
+            &\text{ppi (pixels per inch)} &・・・& 1 インチ あたりの ピクセル数\\
+            \end{aligned}
+            \\
+            $$</p>
+
+            <p>主要なディスプレイ解像度一覧</p>
+            <p>$$
+            \begin{array}{lcc}
+            名称 & 横 & 縦\\
+            SVGA &  800 &  600\\
+            XGA  & 1024 &  764\\
+            SXGA & 1280 & 1024\\
+            HD   & 1280 &  720\\
+            FHD  & 1920 & 1080\\
+            4K   & 3840 & 2160\\
+            8K   & 7680 & 4320\\
+            \end{array}
+            $$</p>
+
+            <p>主要な階調一覧</p>
+            <p>$$
+            \begin{array}{lcl}
+            名称            & 画素あたりのbit数 &色数\\
+            白黒            & 1     &2^{1}=2\\
+            グレースケール   & 8     &2^{8}=256\\
+            8bitカラー      & 8     &2^{8}=256\\
+            12bitカラー     & 12    &2^{12}=4,096\\
+            15bitカラー     & 15    &2^{15}=32,768\\
+            18bitカラー     & 18    &2^{18}=262,144\\
+            フルカラー      & 24    &2^{24}=16,777,216\\
+            \end{array}
+            $$</p>
+
         </section>
     </main>
 </body>
